# fast-juku-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  samconfig.toml  script.py  template.yaml
.aws-sam/: build.toml
api/: db.py  main.py  pyproject.toml
api/cruds/: meta.py  teacher.py  timeslot.py
api/data/: gensen-r5.csv  payslip_template.xlsx
api/myutils/: const.py  utilfunc.py
api/routers/: calc_salary.py  meta.py  root.py  teacher.py  timeslot.py
api/schemas/: meeting.py  meta.py  person.py  salary.py  timeslot.py
dynamodb_data/: shared-local-instance.db
events/: event.json
tests/unit/: test_db.py  test_handler.py
