[tool.poetry]
name = "fast-juku-backend"
version = "0.2.0"
description = ""
authors = ["Yota Hashizume"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
mypy = "^1.6.1"
msoffcrypto-tool = "^5.1.1"
mangum = "0.11.0"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"
boto3 = "^1.29.5"
pynamodb = "^5.5.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
mocker = "^1.1.1"
moto = "^4.2.9"
rich = "^13.7.0"
pandas = "^2.1.3"
python-multipart = "^0.0.6"
starlette = "0.27.0"
chardet = "^5.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "api"
testpaths = ["tests/unit",]

[tool.mypy]
ignore_missing_imports = true
