[tool.poetry]
name = "fast-juku-backend"
version = "0.1.0"
description = ""
authors = ["Yota Hashizume"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
mypy = "^1.6.1"
msoffcrypto-tool = "^5.1.1"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
